Update branding and docs

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <div class="container">
       <!-- Header -->
       <header class="header">
-        <h1>ZNO <span class="accent">Clue Collector</span></h1>
-        <p class="subtitle">Add clues, find your answer!</p>
+        <h1>ZNO Ukrainian <span class="accent">Test Database</span></h1>
+        <p class="subtitle">Smart search for ZNO questions - add clues, find answers instantly!</p>
         <div class="stats" id="stats">
           <span class="stat"
             ><span id="questionCount">0</span> questions loaded</span
