Add password protection and complete site

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <!-- Header -->
       <header class="header">
         <h1>ZNO Ukrainian <span class="accent">Test Database</span></h1>
-        <p class="subtitle">Smart search for ZNO questions - add clues, find answers instantly!</p>
+        <p class="subtitle">
+          Smart search for ZNO questions - add clues, find answers instantly!
+        </p>
         <div class="stats" id="stats">
           <span class="stat"
             ><span id="questionCount">0</span> questions loaded</span
@@ -94,6 +96,7 @@
       </div>
     </div>
 
+    <script src="auth.js"></script>
     <script src="app.js"></script>
   </body>
 </html>
