Add hashing system and logout button

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
           <span class="stat"
             ><span id="questionCount">0</span> questions loaded</span
           >
+          <button class="btn btn-logout" onclick="logout()">🔓 Logout</button>
         </div>
       </header>
 
